--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,25 @@ secret.yml
 
 # data for local chains
 data
+
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+vendor/
+
+# terraform
+terraform.tfstate
+terraform.tfstate.d
+terraform.tfstate.backup
+.terraform
